# Biblioteca

./: .gitignore  CMakeLists.txt  README.md
docs/: convention.md  formatting.hpp
include/faktum/import/: texturetga.hpp
tools/: libgen.cmd  sha256.cmd
